# Flexutils-Scripts

./: .gitignore  MANIFEST.in  README.rst  install.sh  setup.cfg
deprecated/: find_z_clnm_map_old.py  md_to_h5.py
flexutils_scripts/: __init__.py  utils.py
flexutils_scripts/scripts/: __init__.py  align_maps.py  apply_deformation_field_zernike3d.py  check_inside_roi.py  compute_landscape_zscores.py  compute_z_clnm_deformation.py  dimensionality_reduction.py  field_regions_to_binary_zernike3d.py  find_z_clnm_map.py  find_z_clnm_structure.py  flood_fill_mask.py  invert_zernike_field.py  mask_deformation_field.py  md_to_h5.py  polygon_from_vertexes.py  reassign_reference.py  strain_rotation_analysis.py  structure_rmsd_clustering.py  structure_space.py
flexutils_scripts/socket/: client.py  pyqt_socket_threads.py  server.py
flexutils_scripts/viewer_socket/: client.py  pyqt_socket_threads.py  server.py
flexutils_scripts/viewers/: threshold_atoms_viewer.py  viewer_interactive_3d.py  viewer_interactive_hist.py  viewer_map.py  viewer_morph_chimerax.py  viewer_salesman_solver.py
requirements/: flexutils_env.yml
