[metadata]
name = flexutils_scripts
version = attr: flexutils_scripts.__version__
author = David Herreros
author_email = dherreros@cnb.csic.es
description = Scripts for scipion-em-flexutils
long_description = file: README.rst
long_description_content_type = text/markdown
keywords = scipion continuous-heterogeneity image processing xmipp
license = GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007

[options]
packages = find:
zip_safe = True
include_package_data = True

[options.entry_points]
console_scripts =
    align_maps.py = scripts.align_maps:main
    apply_deformation_field_zernike3d.py = scripts.apply_deformation_field_zernike3d:main
    check_inside_roi.py = scripts.check_inside_roi:main
    compute_landscape_zscores.py = scripts.compute_landscape_zscores:main
    compute_z_clnm_deformation.py = scripts.compute_z_clnm_deformation:main
    dimensionality_reduction.py = scripts.dimensionality_reduction:main
    field_regions_to_binary_zernike3d.py = scripts.field_regions_to_binary_zernike3d:main
    find_z_clnm_map.py = scripts.find_z_clnm_map:main
    find_z_clnm_structure.py = scripts.find_z_clnm_structure:main
    flood_fill_mask.py = scripts.flood_fill_mask:main
    invert_zernike_field.py = scripts.invert_zernike_field:main
    mask_deformation_field.py = scripts.mask_deformation_field:main
    md_to_h5.py = scripts.md_to_h5:main
    polygon_from_vertexes.py = scripts.polygon_from_vertexes:main
    reassign_reference.py = scripts.reassign_reference:main
    strain_rotation_analysis.py = scripts.strain_rotation_analysis:main
    structure_rmsd_clustering.py = scripts.structure_rmsd_clustering:main
    structure_space.py = scripts.structure_space:main
    client.py = socket.client:main
    server.pu = socket.server:main

[options.package_data]
requirements = *.txt
* = README.rst
