[metadata]
name = flexutils_scripts
version = attr: flexutils_scripts.__version__
author = David Herreros
author_email = dherreros@cnb.csic.es
description = Scripts for scipion-em-flexutils
long_description = file: README.rst
long_description_content_type = text/markdown
keywords = scipion continuous-heterogeneity image processing xmipp
license = GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007

[options]
packages = find:
zip_safe = True
include_package_data = True

[options.entry_points]
console_scripts =
    align_maps.py = flexutils_scripts.scripts.align_maps:main
    apply_deformation_field_zernike3d.py = flexutils_scripts.scripts.apply_deformation_field_zernike3d:main
    check_inside_roi.py = flexutils_scripts.scripts.check_inside_roi:main
    compute_landscape_zscores.py = flexutils_scripts.scripts.compute_landscape_zscores:main
    compute_z_clnm_deformation.py = flexutils_scripts.scripts.compute_z_clnm_deformation:main
    dimensionality_reduction.py = flexutils_scripts.scripts.dimensionality_reduction:main
    field_regions_to_binary_zernike3d.py = flexutils_scripts.scripts.field_regions_to_binary_zernike3d:main
    find_z_clnm_map.py = flexutils_scripts.scripts.find_z_clnm_map:main
    find_z_clnm_structure.py = flexutils_scripts.scripts.find_z_clnm_structure:main
    flood_fill_mask.py = flexutils_scripts.scripts.flood_fill_mask:main
    invert_zernike_field.py = flexutils_scripts.scripts.invert_zernike_field:main
    mask_deformation_field.py = flexutils_scripts.scripts.mask_deformation_field:main
    polygon_from_vertexes.py = flexutils_scripts.scripts.polygon_from_vertexes:main
    reassign_reference.py = flexutils_scripts.scripts.reassign_reference:main
    strain_rotation_analysis.py = flexutils_scripts.scripts.strain_rotation_analysis:main
    structure_rmsd_clustering.py = flexutils_scripts.scripts.structure_rmsd_clustering:main
    structure_space.py = flexutils_scripts.scripts.structure_space:main
    client.py = flexutils_scripts.socket.client:main
    server.py = flexutils_scripts.socket.server:main
    threshold_atoms_viewer.py = flexutils_scripts.viewers.threshold_atoms_viewer:main
    viewer_interactive_3d.py = flexutils_scripts.viewers.viewer_interactive_3d:main
    viewer_map.py = flexutils_scripts.viewers.viewer_map:main
    viewer_salesman_solver.py = flexutils_scripts.viewers.viewer_salesman_solver:main


[options.package_data]
requirements = *.txt
* = README.rst
